# ATS-Ninja-V2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  celery_app.py  config.py  db.py  document_export.py  main.py  models.py  queue.py  schemas.py  services.py  tasks.py  worker.py
apps/api/app/api/: document_exports.py  health.py  kits.py  resume_extractions.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_create_kits.py  0002_add_include_job_fit.py  0003_add_include_interview_prep.py  0004_add_linkedin_outreach_options.py  0005_add_primary_artifact_selection.py  0006_add_kit_lineage_and_revision.py
apps/api/tests/: conftest.py  test_concurrency_postgres.py  test_document_exports.py  test_health.py  test_kits.py  test_resume_extractions.py  test_tasks.py
apps/web/: .env.example  README.md  design-tokens.json  next.config.ts  package.json
apps/web/app/: fonts.ts  globals.css  layout.tsx  page.tsx
apps/web/app/components/: page.tsx
apps/web/app/history/: page.tsx
apps/web/app/scoring/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/foundation/: artifact-foundation.tsx  new-kit-foundation.tsx
apps/web/components/product/: artifact-route.tsx  artifact-states.tsx  artifact-summary-section.tsx  artifact-toolbar.tsx  (+28 more)
apps/web/lib/: api-client.ts  api-types.ts  artifact-content.ts  artifact-presentation.ts  demo-data.ts  navigation.ts  product.ts  status.ts
apps/web/tests/: document-export.test.mjs  template-document-model.test.mjs  unified-workspace.test.mjs  v5-match-report.test.mjs
docs/: architecture.md  t1-document-templates.md
docs/adr/: 0001-monorepo-modular-monolith.md  0002-deterministic-keyword-extraction.md  0003-llm-provider-abstraction.md  0004-defer-binary-pdf-rendering.md  0005-async-kit-lifecycle.md  0006-replace-arq-with-celery.md  0007-application-kit-contract.md  0008-claim-evidence-traceability.md  0009-validation-wrapped-generation.md  0010-provider-routing.md  0011-repair-vs-rejection-policy.md  0012-result-schema-evolution.md  0013-cache-identity-versioning.md  0014-application-kit-v2-job-fit.md  0015-application-kit-v3-interview-prep.md  0016-application-kit-v4-linkedin-outreach.md  0017-independent-artifact-selection.md  0018-local-pdf-rendering.md  0019-application-kit-v5-match-report-and-change-ledger.md  0020-change-action-revision-and-irreversibility-policy.md
infra/: README.md
infra/docker/: api.Dockerfile  web.Dockerfile
(+33 files in other folders)
