[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ats-api"
version = "0.1.0"
description = "ATS-Ninja-V2 FastAPI backend (Phase 0: health + settings, engine-ready)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# `ats-engine` is a workspace package. In local development install the engine
# editable first (`pip install -e packages/engine`), then this app; pip will
# resolve the already-installed engine rather than reaching PyPI.
dependencies = [
    "ats-engine",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
